--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: wisecow
-          image: wisecow-app:latest
+          image: vyshnaviboddu/wisecow:latest
           ports:
             - containerPort: 4499
